--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
   "homepage": "https://github.com/maseDevelop/chain_DEX#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.2.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "truffle-assertions": "^0.9.2"
   }
 }
